added list of shortcuts

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         </tr>
     </table>
 
+    <div id="tooltip">
+        <div class="question">?</div>
+        <h1>Shortcuts</h1>
+        <li>¬:  not, !, ~</li>
+        <li>∧:  and, &</li>
+        <li>∨:  or, |</li>
+        <li>→:  implies, to, ->, =></li>
+        <li>↔:  equals, <->,=</li>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
